# Battleship

./: .gitignore  CMakeLists.txt  README.md  shipconfig
src/: AI.cpp  AI.h  Battleship.cpp  GamePiece.cpp  GamePiece.h  InclusiveContain.h  Marker.cpp  Marker.h  Player.cpp  Player.h  Random.h  Ship.h  ShipConfig.h  States.h
